# opensearch-arxiv

./: Makefile  README.md  docker-compose.yml  litellm-config.yaml  pyproject.toml
embedding-api/: app.py
notebooks/: search_examples.ipynb
scripts/: download_arxiv_pdfs.py  extract_and_index.py
